initramfspremountdir = $(datadir)/initramfs-tools/scripts/init-premount
initramfscriptsdir = $(datadir)/initramfs-tools/scripts

initramfspremount_SCRIPTS = \
    xsplashaa

initramfscripts_DATA = \
    functions

EXTRA_DIST = \
    functions.in \
    xsplashaa.in

DISTCLEANFILES = \
    functions \
    xsplashaa

