themedir = $(datadir)/xsplashaa/chicken-curie

theme_DATA = \
    chicken-curie.engine \
    distrib-logo.png \
    logo.png \
    throbber-initial.png \
    throbber-spinner.png \
    throbber-finish.png \
    restart-press.svg \
    restart-release.svg \
    shutdown-press.svg \
    shutdown-release.svg

EXTRA_DIST = $(theme_DATA)

