themedir = $(datadir)/xsplashaa/leaves

theme_DATA = \
    leaves.engine \
    distrib-logo.png \
    logo.png \
    throbber-initial.png \
    throbber-spinner.png \
    throbber-finish.png \
    throbber-nok.png \
    restart-press.svg \
    restart-release.svg \
    shutdown-press.svg \
    shutdown-release.svg

EXTRA_DIST = $(theme_DATA)

